--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,8 @@ body {
   background-color: #09182E;
 }
 
+
+
 h1,
 h2,
 h3,
@@ -177,4 +179,9 @@ header.masthead .masthead-content .masthead-subheading {
 .sticky_l li p{
   writing-mode: vertical-rl;
   text-orientation: mixed;
+}
+
+#accent_arrow em {
+  font-style: normal;
+  color:#40A799;
 }
